public/less/lanyon.less
// main: styles.less
@import (reference) "variables.less";

/*
 *  ▄████▄   ██░ ██  ▄▄▄        ██████ ▓█████
 * ▒██▀ ▀█  ▓██░ ██▒▒████▄    ▒██    ▒ ▓█   ▀
 * ▒▓█    ▄ ▒██▀▀██░▒██  ▀█▄  ░ ▓██▄   ▒███
 * ▒▓▓▄ ▄██▒░▓█ ░██ ░██▄▄▄▄██   ▒   ██▒▒▓█  ▄
 * ▒ ▓███▀ ░░▓█▒░██▓ ▓█   ▓██▒▒██████▒▒░▒████▒
 * ░ ░▒ ▒  ░ ▒ ░░▒░▒ ▒▒   ▓▒█░▒ ▒▓▒ ▒ ░░░ ▒░ ░
 *   ░  ▒    ▒ ░▒░ ░  ▒   ▒▒ ░░ ░▒  ░ ░ ░ ░  ░
 * ░         ░  ░░ ░  ░   ▒   ░  ░  ░     ░
 * ░ ░       ░  ░  ░      ░  ░      ░     ░  ░
 * ░
 */



/*

    Splash Page

*/

html.splash,
body.splash {
    overflow: visible;
}

body.splash {

    // hide media query from form body
    &:after {
        display: none;
    }

    main {
        margin: 0 auto;
    }

    #content {
        padding: 0;
        margin: 0;
        width: 100%!important;
        max-width: 100%;

        p {
            max-width: 1200px;
            margin-left: auto;
            margin-right: auto;

            @media @phone {
                width:96%;
            }

            @media @tablet {
                width:96%;
            }

            @media @desktop {
                width:90%;
            }

            @media @desktop-xl {
                width:90%;
            }
        }

        h2 {
            max-width: 1200px;
            margin-left: auto;
            margin-right: auto;

            @media @phone {
                width:96%;
            }

            @media @tablet {
                width:96%;
            }

            @media @desktop {
                width:90%;
            }

            @media @desktop-xl {
                width:90%;
            }
        }

        iframe {
            width: 100%;

            #container {
                max-width: 1200px;
                margin-left: auto;
                margin-right: auto;

                @media @phone {
                    padding-left:.5%;
                    padding-right:.5%;
                }

                @media @tablet {
                    padding-left:1%;
                    padding-right:1%;
                }

                @media @desktop {
                    padding-left:5%;
                    padding-right:5%;
                }
            }
        }

        form {
            width: 100%;
            max-width: 1200px!important;
            margin-left: auto;
            margin-right: auto;

            @media @phone {
                width:99%;
            }

            @media @tablet {
                width:98%;
            }

            @media @desktop {
                width:90%;
            }
        }
    }

    header {
       @media only screen and (max-width: 960px) {
          background-position: 50%;
       }

       #logo-link {
          @media only screen and (min-width: 530px) and (max-width: 960px) {
             left: 34.5%;
             transform: translate3d(0,0,0);
          }

          @media only screen and (min-width: 961px) and (max-width: 1136px) {
             height: auto;
             width: 35%;
             padding-top: 11%;
          }

          @media only screen and (min-width: 1137px) {
             width: 310px;
             height: 98px;
          }
       }
    }

    #toggle-nav { display: none }

    #content {
        @media @desktop-xl { width:60% }
        @media @desktop { width:80% }
    }
}










// Set everything to border-box, but let modular layouts easily overwrite it
html  { box-sizing: border-box }
*,
*:before,
*:after { box-sizing: inherit }

html { height: 100% }
body { min-height: 100% }

html,
body {
    margin: 0;
    padding: 0;
    font-size: 10px;
    overflow-x: hidden;
}

.embed {
   font-size: 10px!important;
}

body {
    position:relative;
    background-color: @baseBlue;
    background-image: url('../img/stars-bg.gif');
    background-image: url('../img/stars-bg.gif'), linear-gradient(to bottom, @baseBlue 714px, @darkBlue 100%), ;
    background-position: top center;
    background-repeat: repeat-x;
    background-attachment: fixed;

    color: @whiteBlue;
    -webkit-overflow-scrolling: touch;
}


section {// remove margins on top and bottom children to honor padding
    // Add a line break between succeeding elements
    * + * { margin-top: 1.5rem }
}

.wrap {
    background: url('../img/stars.png');
    min-height: 100%;
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
}

main {
    font-size: 1.5rem;
    width: auto;
    transition: @navContainerTiming @navContainerEase;
    @media @notMobile {
        margin-left: @navContainerWidth;
    }
    @media only screen and (min-width: 1483px) {
        margin-left: 15%;
    }
    &.menuOpen {
        transform: translate3d(@navContainerWidth, 0px, 0px);
        transform-style: preserve-3d;
        backface-visibility: hidden;
        @media @notMobile {
            transform: translate3d(0, 0, 0);
        }
    }
}

    header {
    z-index: 100;
    background: url('../img/logo-retna.png');
    background-size: contain;
    background-position: top center;
    background-repeat: no-repeat;
    image-rendering: pixelated;
    padding-top: 16.831%;
    max-width: 900px;
    position: relative;
    margin: 0 auto;
    @media only screen and (min-width: 1137px) {
        padding: 0;
        height: 152px;
    }
    @media only screen and (max-width: 960px) {
        padding: 0;
        height: 120px;
        background-position: 20% 50%;
        background-size: cover;
    }
    @media @phone {
        background-position: 50% 50%;
        margin-bottom: 60px;
    }

   #logo-link {
      display: block;
      position: absolute;
      top: 10px;
      left: 50%;
      transform: translate3d(-50%, 0, 0);
      width: 250px;
      height: 80px;
      margin: 0 auto;

      @media only screen and (min-width: 530px) and (max-width: 960px) {
         left: 34.5%;
         transform: translate3d(0,0,0);
      }

      @media only screen and (min-width: 961px) and (max-width: 1136px) {
         height: auto;
         width: 35%;
         padding-top: 11%;
      }

      @media only screen and (min-width: 1137px) {
         width: 310px;
         height: 98px;
      }
   }
}



#content {
    padding: 0 4%;
    margin: 0 auto;
    max-width: 1200px;
    min-height: 100%;

    @media @mobile {
        width:100%;
        margin: 0;
    }

    @media @desktop {
        width:90%;
        padding: 0;
    }
}

#footer p {
    padding: 1em;
    margin: 0;
}

section.container {
    background: white;
    width: 100%;
    margin: 0 auto;
    border: 2px solid white;
    padding: 4%;
    border-radius: 2.5rem;
    box-shadow:
        0px 2px 14px rgba(0, 20, 40, .8),
        inset 0px 0px 50px rgba(185, 205, 200, .7),
        inset 0px 0px 180px rgba(205, 225, 230, 1);
    max-width:1200px!important;

    @media @phone {
    box-shadow:
        0px 2px 14px rgba(0, 20, 40, .8),
        inset 0px 0px 5px rgba(185, 205, 200, .7),
        inset 0px 0px 25px rgba(205, 225, 230, 1);
    }

    @media @tablet {
    box-shadow:
        0px 2px 14px rgba(0, 20, 40, .8),
        inset 0px 0px 5px rgba(185, 205, 200, .7),
        inset 0px 0px 25px rgba(205, 225, 230, 1);
    }
}


hr {
   margin: 32px 0;
   border: none;
   height: 2px;
   background-image: linear-gradient( to right,
      fade(@lightBlue,0%),
      fade(@lightBlue,100%),
      fade(@lightBlue,0%),
   );
}


#back {
    display: inline-block;
    position: absolute;
    right: 100%;
    bottom: 40px;
    font-size: 1rem;
    font-weight: bold;
    text-transform: uppercase;
    text-decoration: none;
    text-align: center;
    text-shadow: none;
    padding: 1rem .75rem;
    border-radius: 1rem 0 0 1rem;

    transform-style: preserve-3d;
    transform: perspective( 200px ) rotateY( -60deg );
    transform-origin: right center;
    backface-visibility: hidden;

    transition: all .4s cubic-bezier(0.19, 0.02, 0, 0.99);

    background-color: @blue;

    box-shadow:
        inset -2px 0 2px rgba(20,31,34,0.6),
        inset -5px 0 2px rgba(20,31,34,0.3),
        inset -6px 0 4px rgba(20,31,34,0.1),
        inset -100px 0 5px rgba(20,31,34,0.5);
    color: fade(white,75%);

    &:hover {
        transform: perspective( 200px ) rotateY( 0deg );

        box-shadow:
            inset -2px 0 2px rgba(20,31,34,0.6),
            inset -5px 0 2px rgba(20,31,34,0.15),
            inset -6px 0 4px rgba(20,31,34,0.05),
            inset -100px 0 5px rgba(20,31,34,0);
        color: fade(white,100%);
    }

    .fa {
        display: block;
        font-size: 2.2rem;
        margin-bottom: .25rem
    }
}



/*
 * Posts and pages
 *
 * Each post is wrapped in `.post` and is used on default and post layouts. Each
 * page is wrapped in `.page` and is only used on the page layout.
 */

.page,
.post {
    margin-bottom: 4em;
}
/* Blog post or page title */

.page-title,
.post-title,
.post-title a {
    color: #303030;
}

.page-title,
.post-title {
    margin-top: 0;
}
/* Meta data line below post title */

.post-date {
    display: block;
    margin-bottom: 1rem;
    color: #9a9a9a;
}
/* Related posts */

.related {
    padding-top: 2rem;
    padding-bottom: 2rem;
    border-top: 1px solid #eee;
}

.related-posts {
    padding-left: 0;
    list-style: none;
}

.related-posts h3 {
    margin-top: 0;
}

.related-posts li small {
    color: #999;
}

.related-posts li a:hover {
    color: #268bd2;
    text-decoration: none;
}

.related-posts li a:hover small {
    color: inherit;
}
/*
 * Pagination
 *
 * Super lightweight (HTML-wise) blog pagination. `span`s are provide for when
 * there are no more previous or next posts to show.
 */

.pagination {
    overflow: hidden;
    /* clearfix */

    margin-left: -1rem;
    margin-right: -1rem;
    color: #ccc;
    text-align: center;
}
/* Pagination items can be `span`s or `a`s */

.pagination-item {
    display: block;
    padding: 1rem;
    border: 1px solid #eee;
}

.pagination-item:first-child {
    margin-bottom: -1px;
}
/* Only provide a hover state for linked pagination items */

a.pagination-item:hover {
    background-color: #f5f5f5;
}

@media (min-width: 30em) {
    .pagination {
        margin: 3rem 0;
    }
    .pagination-item {
        float: left;
        width: 50%;
    }
    .pagination-item:first-child {
        margin-bottom: 0;
        border-top-left-radius: 4px;
        border-bottom-left-radius: 4px;
    }
    .pagination-item:last-child {
        margin-left: -1px;
        border-top-right-radius: 4px;
        border-bottom-right-radius: 4px;
    }
}

.video-wrapper {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    padding-top: 25px;
    height: 0;
}
.video-wrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

